...

            <EditText
                android:id="@+id/add_attraction_name_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="Введите название"
                android:fontFamily="@font/inter_regular"
                android:imeOptions="actionNext"
                android:inputType="text"

                android:paddingHorizontal="4dp"
                android:paddingVertical="5dp"
...
                        android:textSize="17sp"
                        android:fontFamily="@font/inter_regular"
                        android:text="Название"
                        />

                    <EditText
                        android:id="@+id/add_attraction_station_name_edit"
                        android:layout_width="match_parent"
                        android:imeOptions="actionNext"
                        android:paddingHorizontal="4dp"
                        android:paddingVertical="5dp"
                        android:hint="Введите название станции "

...
                        android:textColor="@color/colorBlack"
                        android:textSize="17sp"
                        android:fontFamily="@font/inter_regular"
                        />

                    <EditText
                        android:id="@+id/add_attraction_station_branch_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="4dp"
                        android:paddingVertical="5dp"
                        android:hint="Введите ветку"

...
                        android:background="@drawable/edit_text_rounded"
                        android:inputType="number" />
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_attraction_add_cell_btn"
                    style="@style/RedButtonStyle"
                    android:layout_width="270dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="10dp"
                    android:minHeight="0dp"
                    android:text="Добавить"
...
                android:paddingHorizontal="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_attraction_add_cell_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_attraction_btn"
                style="@style/RedButtonStyle"
                android:layout_width="270dp"
                android:layout_height="32dp"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="20dp"
                android:minHeight="0dp"
...
