<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fillViewport="true"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/admin_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/colorBlack"
            android:textSize="26sp"

            android:text="Админ панель"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_txt"
            android:layout_width="0dp"
            android:layout_marginTop="90dp"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:fontFamily="@font/inter_regular"
            android:layout_height="wrap_content"
            android:text="Логин"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin_panel" />

        <EditText
            android:id="@+id/login_edit_text_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_rounded"
            android:contentDescription="Поле ввода логина"
            android:autofillHints="username"
            android:hint="Введите логин"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_txt" />

        <TextView
            android:id="@+id/password_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:fontFamily="@font/inter_regular"
            android:layout_marginTop="12dp"
            android:text="Пароль"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_edit_text_txt" />

        <EditText
            android:id="@+id/password_edit_text_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_rounded"
            android:contentDescription="Поле ввода пароля"
            android:autofillHints="password"
            android:gravity="top|start"
            android:hint="Введите пароль"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_txt" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            style="@style/RedButtonStyle"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="23dp"
            android:layout_marginHorizontal="40dp"
            android:minHeight="0dp"
            android:text="Войти"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text_txt" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>